<resources>

    <string name="title_activity_customer">CustomerActivity</string>

    <string name="title_activity_order">OrderActivity</string>

    <string name="title_activity_courier">CourierActivity</string>

    <string name="app_name">Veloport</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="field_name">Имя</string>

    <string name="field_email">Email</string>

    <string name="field_phone">Телефон</string>

    <string name="field_address_sender">Адрес отправителя</string>

    <string name="field_address_delivery">Адрес доставки</string>

    <string name="field_message">Сообщение</string>    <!-- Hintes for authorization -->

    <string name="field_login"> Логин </string>

    <string name="field_pass"> Пароль </string>

    <string name="button_send">Велопортировать</string>

    <string name="google_debug_key">AIzaSyDvTVnB2ls-_d1hIVXWbVykP7qq7oPeUCQ</string>

    <string name="google_release_key">AIzaSyDMQGRQOS600eLg78HvL2746YQAJFYyDzk</string>

    <string name="google_map_key">@string/google_debug_key</string>

    <string name="sender_id">185997592493</string>

    <string name="title_activity_start">StartActivity</string>

    <string name="text_customer">Я клиент</string>

    <string name="text_courier">Я курьер</string>

    <string name="hello_courier_fragment">Hello courier fragment</string>

    <string name="authorization_incorrect_data"> Неверный логин или пароль </string>

    <string name="about_us"> О нас </string>

    <string name="title_activity_about_as">AboutAsActivity</string>

    <string name="contacts">Контакты</string>

    <string name="vacancy">Вакансии</string>

    <string name="we_are">Мы </string>

    <string name="order_1">Заказ 1: Пицца </string>

    <string name="order_2">Заказ 2: Роллы </string>

    <string name="new_order"> Новый Заказ </string>

    <string name="get"> Принять </string>

    <string name="searching_of_courier"> Поиск курьера </string>

    <string name="order_take"> Заказ принят </string>

    <string name="order_delivery"> Доставлен </string>

    <!-- Default message for progress dialog -->
    <string name="please_wait"> Идет обработка запроса </string>

    <string name="calculating_cost"> Идет подсчет цены </string>

    <string name="in_progress"> Идет обработка запроса </string>

    <string name="izvilistaya">Извилистая 19 Ростов-на-Дону Ростов-на-Дону</string>

    <string name="service_not_available">Service not available</string>

    <string name="invalid_address_used">Invalid address used</string>

    <string name="no_address_found">No address found</string>

    <string name="address_found">Address found</string>

    <string name="calculate_cost">Посчитать цену</string>

    <string name="cost">Цена</string>

    <string name="address_sender">Адресс отправления</string>

    <string name="address_delivery">Адресс доставки</string>

    <string name="enter">Войти</string>

    <string name="free_booking">Свободные заказы</string>

    <string name="your_order">Ваши заказы</string>

    <string name="not_have_orders">Вы не сделали заказ</string>

    <string name="new_orders">Новый заказ</string>

    <string name="check_of_login_and_pass">Проверка логина и пароля</string>

    <string name="delivery_via">Доставка через</string>

    <string name="take_from">Забрать:</string>

    <string name="delivery_to">Доставить:</string>

    <string name="registration"> Создать учетную запись </string>

    <string name="forgot_password"> Забыли пароль? </string>

    <string name="registrate"> Зарегистрироваться </string>

    <string name="title_registration"> Регистрация </string>

    <string name="free_courier"> Свободных курьеров </string>

    <string name="customer"> Клиент </string>

    <string name="courier"> Курьер </string>

    <string name="how_been_courier"> Как стать курьером ? </string>

    <string name="call_to_administrator_for_more_information"> Обратитесь к админитратору за подробной информацией! </string>

    <string name="no_internet_connection"> Отсутствует интернет соединение </string>

    <string name="map"> Карта </string>

    <string name="login_already_register"> Такой логин уже существует </string>

    <string name="device_already_register"> С вашего девайса уже проводилась регистрация </string>

    <string name="error_of_registration"> Ошибка регистрации </string>

    <string name="logout"> Выйти </string>

    <string name="toast_wrong_email"> Enter valid email. </string>

    <string name="toast_wrong_password"> Enter valid password. </string>

    <string name="toast_wrong_field"> Enter valid %s. </string>

    <string name="toast_wrong_phone"> Enter valid phone number. </string>

    <string name="toast_location_is_not_available"> Location is not available. </string>

    <string name="toast_passwords_mismatch"> Passwords mismatch. </string>

    <string name="toast_unknown_error"> Unknown error. </string>

    <string name="toast_contact_was_approve"> Contact was approve </string>

    <string name="inadmissible_empty_field"> Недопустимы пустые поля </string>

    <string name="inadmissible_empty_address_field"> Недопустимы пустые адреса </string>

    <string name="error_change_internet_connection"> Ошибка проверьте интернет соединение </string>

    <string name="free"> Свободные </string>

    <string name="my"> Мои </string>

    <string name="rub"> р. </string>

    <string name="server_error"> Ошибка на стороне сервера попробуйте позже </string>

    <string name="delivery_near"> Доставка уже близко :) </string>

    <string name="invalid_input_time"> Дата не может быть раней чем текущая </string>

    <string name="created_new_order"> Создан новый заказ </string>

    <string name="your_order_was_taking"> Ваш заказ был принят </string>

    <string name="creating_order"> Создается заказ </string>

    <string name="warning_order_was_delivered"> Доставка выполнена </string>

    <string name="invalid_registration_id"> Вам не удалось получить id,
        возможно у вас проблемы с Google Services, попробуйте еще раз
        или обратитесь в тех поддержку </string>

</resources>
