<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="ru.veloportation.veloport.ui.fragments.BookingFragment">


    <!-- android:text="@string/button_send" -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/buttonSend">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/field_name"
            android:ems="10"
            android:id="@+id/etName"
            android:visibility="gone"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/field_email"
            android:ems="10"
            android:id="@+id/etEmail"
            android:visibility="gone"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/field_phone"
            android:ems="10"
            android:id="@+id/etPhone"
            android:visibility="gone"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/field_address_sender"
            android:ems="10"
            android:id="@+id/etAddressSender" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/field_address_delivery"
            android:ems="10"
            android:id="@+id/etAddressDelivery" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_cost"
                android:padding="20dp"
                android:id="@+id/tvCost"
                android:background="@drawable/border"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etMessage"
            android:hint="@string/field_message"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_weight="8" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ВЕЛОПОРТИРОВАТЬ"
        android:id="@+id/buttonSend"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
