<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/margin_widget_default_small"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
       android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:id="@+id/linearLayout3"

        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1">

            <EditText
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/etName"
                android:hint="@string/field_name"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                style="@style/EditTextAuthorization" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etLogin"
                android:hint="@string/field_login"
                android:ems="10"
                android:layout_marginTop="@dimen/margin_widget_default_small"
                android:layout_gravity="center_horizontal"
                style="@style/EditTextAuthorization" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="12"
                android:hint="@string/field_email"
                android:layout_marginTop="@dimen/margin_widget_default_small"
                android:id="@+id/etEmail"
                android:layout_gravity="center_horizontal"
                style="@style/EditTextAuthorization" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPass"
                android:hint="@string/field_pass"
                android:layout_marginTop="@dimen/margin_widget_default_small"
                android:layout_gravity="center_horizontal"
                style="@style/EditTextAuthorization" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textColor="@color/white"
                android:padding="@dimen/margin_widget_default_small"
                android:id="@+id/buttonRegister"
                android:background="@color/main_color"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>