<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ru.veloportation.veloport.ui.fragments.LoginFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_widget_default_normal"
        android:id="@+id/ibBack"
        android:src="@mipmap/ic_back"
        android:background="@null"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etLogin"
            style="@style/EditTextAuthorization"
            android:hint="@string/field_login" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPass"
            android:hint="@string/field_pass"
            style="@style/EditTextAuthorization"
            android:layout_below="@+id/etLogin"
            android:layout_marginTop="@dimen/margin_widget_default_small" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@color/main_color"
            android:textColor="@color/white"
            android:id="@+id/buttonAuthorize"
            android:layout_marginTop="@dimen/margin_widget_default_normal"
            android:layout_gravity="center"
            android:layout_below="@+id/etPass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/etPass"
            android:layout_alignEnd="@+id/etPass" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/tvForgotPass"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_widget_default_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/tvCreateAccount"
            android:gravity="center"
            android:textSize="@dimen/text_size_default_medium"
            android:padding="@dimen/text_size_default_small"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_color"

        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/ibBack"
        style="@style/TextViewTitle"/>

</RelativeLayout>
